# app-freeze

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  app-freeze.spec  build.sh  demo.py  demo_device_selection.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: KEYBINDINGS.md  LIMITATIONS.md  RELEASE.md  SAFETY.md  checklist.md  outline.md  requirements.md
poc/: disable-apps.sh  enable-apps.sh
scripts/: release.sh
src/app_freeze/: __init__.py  app.py  main.py  reporting.py  state.py
src/app_freeze/adb/: __init__.py  client.py  errors.py  models.py  parser.py
src/app_freeze/ui/: __init__.py  screens.py  theme.py  widgets.py
tests/: test_app.py  test_app_startup.py  test_cli_startup.py  test_client.py  test_css_validation.py  test_errors.py  test_integration.py  test_models.py  test_parser.py  test_reporting.py
